<resources>
    <string name="app_name">Karma</string>
    <string name="rightAddress">The Right Address\nFor Shopping\nAny day</string>
    <string name="quality">It is now very easy to reach the\nbest quality among the\nproducts on the internet!</string>
    <string name="snacbar_reset_text_login_fragment">Reset link was send o your email</string>
    <string name="snackbar_maximum_amount_text_cardFragmrnt">This is the maximum amount available!</string>
    <string name="delete_alert_dialog_text_title">Delete item from cart</string>
    <string name="delete_alert_dialog_text_message">Do you want to delete this item from cart?</string>
    <string name="delete_alert_dialog_text_negativ_button">Cancel</string>
    <string name="delete_alert_dialog_text_positiv_button">Yes</string>
    <string name="main_viewpager_name_fragment">Main</string>
    <string name="zweite_viewpager_name_fragment">T-shirts</string>
    <string name="dritte_viewpager_name_fragment">Jackets</string>
    <string name="vierte_viewpager_name_fragment">Suits</string>
    <string name="funfte_viewpager_name_fragment">Jeans</string>
    <string name="sexte_viewpager_name_fragment">Trousers</string>
    <string name="snackbar_select_color_and_size_text">Select color and size if available!</string>
    <string name="snackbar_max_amount_text_details_fragment">You have the maximum number of products in your cart!</string>
    <string name="snackbar_success_add_product_to_car_details_fragment">Product successfully added!</string>
    <string name="select_address">Please select an address</string>
    <string name="orders_items">Orders items</string>
    <string name="do_you_want_to_order_you_cart_items">Do you want to order you cart items?</string>
    <string name="wait_for_a_reply">Your message has been successfully sent, please wait for a reply to your email.</string>
    <string name="dolar">$</string>
    <string name="error">"Error: "</string>
    <string name="order_word">Order #</string>
    <string name="address_updated_successfully">Address updated successfully</string>
    <string name="address_deleted_successfully">Address deleted successfully</string>
    <string name="your_order_was_placed">Your order was placed</string>
    <string name="check_your_inputs">Check your inputs</string>
    <string name="email_cannot_be_empty">Email cannot be empty</string>
    <string name="wrong_email_format">Wrong email format</string>
    <string name="password_cannot_be_empty">Password cannot be empty</string>
    <string name="password_should_contains_6_char">Password should contains 6 char</string>
    <string name="address_title_cannot_be_empty">Address title cannot be empty</string>
    <string name="full_name_cannot_be_empty">Full name cannot be empty</string>
    <string name="street_cannot_be_empty">Street  cannot be empty</string>
    <string name="wrong_phone_number_format">Wrong phone number format</string>
    <string name="phone_number_cannot_be_empty">Phone number cannot be empty</string>
    <string name="city_cannot_be_empty">City cannot be empty</string>
    <string name="state_cannot_be_empty">State cannot be empty</string>
    <string name="message_cannot_be_empty">Message cannot be empty</string>
    <string name="the_message_must_contain_a_minimum_of_50_symbols">The message must contain a minimum of 50 symbols</string>
    <string name="see_product">See product</string>
    <string name="addresses">Addresses</string>
    <string name="address_location_ex_home">Address location Ex: Home</string>
    <string name="full_name">Full Name</string>
    <string name="street">Street</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="phone">Phone</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="best_products">Best products</string>
    <string name="billing">Billing</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="cannot_use_payments_methods">Kwi-kwi dose not support virtual payments. You can pay when you receive your order.</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="total">Total</string>
    <string name="place_order">Place Order</string>
    <string name="my_cart">My Cart</string>
    <string name="check_out">Check out</string>
    <string name="search_now">Search Now</string>
    <string name="start">Start</string>
    <string name="let_s_login">Let’s Login</string>
    <string name="dont_have_an_account_register">Don’t have an account Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password</string>
    <string name="login">Login</string>
    <string name="best_deals">Best deals</string>
    <string name="address">Address</string>
    <string name="products">Products</string>
    <string name="all_orders">All orders</string>
    <string name="color">Color</string>
    <string name="size">Size</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="notifications">Notifications</string>
    <string name="support">Support</string>
    <string name="orders">Orders</string>
    <string name="edit_personal_details">edit personal details</string>
    <string name="lets_register">Let’s Register</string>
    <string name="do_you_have_account">Do you have an account? log in</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="register">Register</string>
    <string name="no_such_product_was_found">No such product was found...</string>
    <string name="categories">Categories</string>
    <string name="support_contact_us">Support contact us</string>
    <string name="how_we_can_help_you">How we can help you?</string>
    <string name="type_your_first_mess">Contact us to create your first message and get real-time support.</string>
    <string name="write_to_us">Write to us</string>
    <string name="message">Message</string>
    <string name="your_message">Your message</string>
    <string name="send">Send</string>
    <string name="my_account">My account</string>
    <string name="forgot_change_password">Forgot/Change password</string>
    <string name="reset_password">Reset Password</string>
    <string name="text_about_send_mess_for_reset_pass">We will send you the password reset link to your email</string>
    <string name="cancel">Cancel</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="add_to_cart_detail">Add to cart</string>
    <string name="your_shopping_cart_is_empty">Your shopping cart is empty</string>
    <string name="no_orders_to_show">No orders to show</string>
    <string name="internet_connection_error">Internet connection error</string>
    <string name="try_again">Try again</string>
    <string name="go_out">Exit</string>
    <string name="user__not_connected_to_a_network">User is currently not connected to a network or there is no internet connection available. Please try again.</string>
    <string name="logo_name">KaRmA</string>
    <string-array name="sorted_items">
        <item>By default</item>
        <item>Price: High-Low</item>
        <item>Price: Low-High</item>
        <item>By name</item>
    </string-array>
</resources>