<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/blury_background"
        android:scaleType="centerCrop"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvAppName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            style="@style/h3"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:drawablePadding="6dp"
            android:drawableStart="@drawable/ic_kleine_shape"
            android:text="@string/logo_name"/>

        <TextView
            android:id="@+id/tvRightAddressForShopping"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/h4"
            android:layout_marginTop="45dp"
            app:layout_constraintTop_toBottomOf="@+id/tvAppName"
            app:layout_constraintStart_toStartOf="@id/tvAppName"
            app:layout_constraintEnd_toEndOf="@id/tvAppName"
            android:text="@string/rightAddress"
            android:textAlignment="center"/>
        <TextView
            android:id="@+id/tvQuality"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/h2"
            app:layout_constraintStart_toStartOf="@id/tvRightAddressForShopping"
            app:layout_constraintEnd_toEndOf="@id/tvRightAddressForShopping"
            app:layout_constraintTop_toBottomOf="@id/tvRightAddressForShopping"
            android:textAlignment="center"
            android:gravity="center"
            android:text="@string/quality"
            android:layout_marginTop="@dimen/tvQualityMarginTop"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/butRegisterAccountOptions"
            android:layout_width="@dimen/mediumButtonWith"
            android:layout_height="@dimen/mediumButtonHeight"
            style="@style/blueButtonStyle"
            app:layout_constraintTop_toBottomOf="@id/tvQuality"
            app:layout_constraintRight_toRightOf="@id/tvQuality"
            app:layout_constraintLeft_toLeftOf="@id/tvQuality"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/register"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/butLoginAccountOptions"
            android:layout_width="@dimen/mediumButtonWith"
            android:layout_height="@dimen/mediumButtonHeight"
            style="@style/whiteButtonStyle"
            app:layout_constraintTop_toBottomOf="@id/butRegisterAccountOptions"
            app:layout_constraintRight_toRightOf="@id/tvQuality"
            app:layout_constraintLeft_toLeftOf="@id/tvQuality"
            android:layout_marginTop="10dp"
            android:text="@string/login"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>