<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">





    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:scaleType="fitEnd"
                android:src="@drawable/background_register"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tvLetsRegister"
                style="@style/h4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="150dp"
                android:text="@string/lets_register"
                android:textAlignment="textStart"
                app:layout_constraintStart_toStartOf="@id/guidelineRegisterLeft"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvHaveAccount"
                style="@style/h2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/do_you_have_account"
                android:textAlignment="center"
                app:layout_constraintStart_toStartOf="@id/tvLetsRegister"
                app:layout_constraintTop_toBottomOf="@+id/tvLetsRegister" />


            <EditText
                android:id="@+id/etFirstNameRegister"
                android:layout_width="0dp"
                android:layout_height="@dimen/editTextHeight"
                app:layout_constraintStart_toStartOf="@+id/guidelineRegisterLeft"
                app:layout_constraintEnd_toEndOf="@id/guidelineRegisterRight"
                app:layout_constraintTop_toBottomOf="@+id/tvHaveAccount"
                style="@style/editText"
                android:hint="@string/first_name"
                android:inputType="textPersonName"
                android:layout_marginTop="50dp"
                android:drawableStart="@drawable/ic_name_icon"
                android:drawablePadding="20dp"
                android:paddingStart="20dp"
                />
            <EditText
                android:id="@+id/etLastNameRegister"
                android:layout_width="0dp"
                android:layout_height="@dimen/editTextHeight"
                app:layout_constraintStart_toStartOf="@+id/guidelineRegisterLeft"
                app:layout_constraintEnd_toEndOf="@id/guidelineRegisterRight"
                app:layout_constraintTop_toBottomOf="@+id/etFirstNameRegister"
                style="@style/editText"
                android:hint="@string/last_name"
                android:inputType="textPersonName"
                android:layout_marginTop="15dp"
                android:drawableStart="@drawable/ic_name_icon"
                android:drawablePadding="20dp"
                android:paddingStart="20dp"
                />

            <EditText
                android:id="@+id/etEmailRegister"
                android:layout_width="0dp"
                android:layout_height="@dimen/editTextHeight"
                app:layout_constraintStart_toStartOf="@+id/guidelineRegisterLeft"
                app:layout_constraintEnd_toEndOf="@id/guidelineRegisterRight"
                app:layout_constraintTop_toBottomOf="@+id/etLastNameRegister"
                style="@style/editText"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:layout_marginTop="15dp"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="20dp"
                android:paddingStart="20dp"
                />
            <EditText
                android:id="@+id/etPasswordRegister"
                android:layout_width="0dp"
                android:layout_height="@dimen/editTextHeight"
                app:layout_constraintStart_toStartOf="@+id/guidelineRegisterLeft"
                app:layout_constraintEnd_toEndOf="@id/guidelineRegisterRight"
                app:layout_constraintTop_toBottomOf="@+id/etEmailRegister"
                style="@style/editText"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:layout_marginTop="15dp"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="20dp"
                android:paddingStart="20dp"
                />

            <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
                android:id="@+id/butRegisterRegister"
                style="@style/blueButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/mediumButtonHeight"
                android:layout_marginTop="30dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="40dp"
                android:background="@drawable/corner_radius_button_login"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/register"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="@id/guidelineRegisterRight"
                app:layout_constraintTop_toBottomOf="@id/etPasswordRegister"
                app:spinning_bar_color="@color/white" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineRegisterLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.09" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineRegisterRight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.91" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>

