<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitStart"
        android:src="@drawable/background_modern"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvLetsLogin"
            style="@style/h4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:text="@string/let_s_login"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="@id/guidelineLoginLeft"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvDontHaveAccount"
            style="@style/h2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/dont_have_an_account_register"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/tvLetsLogin"
            app:layout_constraintTop_toBottomOf="@+id/tvLetsLogin" />

        <EditText
            android:id="@+id/etEmailLogin"
            style="@style/editText"
            android:layout_width="0dp"
            android:layout_height="@dimen/editTextHeight"
            android:layout_marginTop="40dp"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="20dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="20dp"
            app:layout_constraintEnd_toEndOf="@id/guidelineLoginRight"
            app:layout_constraintStart_toStartOf="@+id/guidelineLoginLeft"
            app:layout_constraintTop_toBottomOf="@+id/tvDontHaveAccount" />

        <EditText
            android:id="@+id/etPasswordLogin"
            style="@style/editText"
            android:layout_width="0dp"
            android:layout_height="@dimen/editTextHeight"
            android:layout_marginTop="15dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="20dp"
            android:drawablePadding="20dp"
            android:drawableStart="@drawable/ic_password"
            app:layout_constraintEnd_toEndOf="@id/guidelineLoginRight"
            app:layout_constraintStart_toStartOf="@+id/guidelineLoginLeft"
            app:layout_constraintTop_toBottomOf="@+id/etEmailLogin" />

        <TextView
            android:id="@+id/tvForgotPasswordLogin"
            style="@style/h2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/forgot_password"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/tvLetsLogin"
            app:layout_constraintTop_toBottomOf="@+id/etPasswordLogin" />

        <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
            android:id="@+id/butLoginLogin"
            style="@style/blueButtonStyle"
            android:layout_width="120dp"
            android:layout_height="@dimen/mediumButtonHeight"
            android:layout_marginTop="15dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/corner_radius_button_login"
            android:text="@string/login"
            app:spinning_bar_color="@color/white"
            app:layout_constraintRight_toRightOf="@id/guidelineLoginRight"
            app:layout_constraintTop_toBottomOf="@id/tvForgotPasswordLogin" />




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="50dp"
            android:gravity="center_vertical|center"
            android:paddingStart="40dp"
            android:paddingEnd="40dp"
            app:layout_constraintTop_toBottomOf="@id/butLoginLogin"
            app:layout_constraintStart_toStartOf="@id/guidelineLoginLeft">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/googleLogin"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_google_icon"
                app:civ_border_color="@color/g_blue_gray200"
                app:civ_border_overlay="true"
                app:civ_border_width="1dp"
                app:layout_constraintStart_toStartOf="@id/guidelineLoginLeft"
                app:layout_constraintTop_toBottomOf="@id/butLoginLogin" />

            <View
                android:layout_width="40dp"
                android:layout_height="0dp"/>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/facebookLogin"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/facebook_icon"
                app:civ_border_overlay="true"
                app:layout_constraintStart_toStartOf="@id/googleLogin"
                app:layout_constraintTop_toTopOf="@id/googleLogin"
                app:layout_constraintBottom_toBottomOf="@id/googleLogin"/>

            <View
                android:layout_width="40dp"
                android:layout_height="0dp"/>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/telegramLogin"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_telegram_icon"
                app:civ_border_overlay="true"
                app:layout_constraintStart_toStartOf="@id/googleLogin"
                app:layout_constraintTop_toTopOf="@id/googleLogin"
                app:layout_constraintBottom_toBottomOf="@id/googleLogin"/>

        </LinearLayout>




        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineLoginLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineLoginRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.91" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>